Прописала адреса ссылкам

--- a/source/photo.html
+++ b/source/photo.html
@@ -57,7 +57,7 @@
       <section class="gallery">
         <ul class="gallery__list">
           <li class="gallery__item photo-card">
-            <a class="photo-card__img" href="#">
+            <a class="photo-card__img" href="img/photo-sunset-full.jpg">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
@@ -79,7 +79,7 @@
             </div>
           </li>
           <li class="gallery__item photo-card">
-            <a class="photo-card__img" href="#">
+            <a class="photo-card__img" href="img/photo-cactus-full.jpg">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
@@ -101,7 +101,7 @@
             </div>
           </li>
           <li class="gallery__item photo-card">
-            <a class="photo-card__img" href="#">
+            <a class="photo-card__img" href="img/photo-roads-full.jpg">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
@@ -123,7 +123,7 @@
             </div>
           </li>
           <li class="gallery__item photo-card">
-            <a class="photo-card__img" href="#">
+            <a class="photo-card__img" href="img/photo-bridge-full.jpg">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
